feat: Add public tag to model
